add func delete file
