# src/main/resources/openapi.yml
@@ -128,6 +128,30 @@ paths:
               schema:
                 type: string
                 format: binary
+  /delete:
+    delete:
+      summary: deleteFile
+      operationId: delete
+      tags:
+        - file
+      parameters:
+        - in: query
+          name: pathToFiles
+          schema:
+            type: string
+          description: The path to the folder
+          required: true
+      responses:
+        200:
+          description: successful operation
+          content:
+            text/plain:
+              schema:
+                type: string
+#            application/octet-stream:
+#              schema:
+#                type: string
+#                format: binary
 #            application/json:
 #              schema:
 #                type: array
